--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
             <version>12.1.0.2</version>
         </dependency>
         <dependency>
-            <groupId>unknown.binary</groupId>
-            <artifactId>swingx-all-1.6.4</artifactId>
-            <version>SNAPSHOT</version>
+            <groupId>org.swinglabs.swingx</groupId>
+            <artifactId>swingx-all</artifactId>
+            <version>1.6.4</version>
         </dependency>
     </dependencies>
 </project>
