--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,10 @@
             <artifactId>swingx-all</artifactId>
             <version>1.6.4</version>
         </dependency>
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
     </dependencies>
 </project>
